--- a/res/layout/setup_cyanogen_services.xml
+++ b/res/layout/setup_cyanogen_services.xml
@@ -37,19 +37,6 @@
                 android:layout_height="match_parent"
                 style="@style/PageContent">
 
-                <!-- The caption about privacy policy -->
-                <TextView
-                    android:id="@+id/privacy_policy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:layout_marginBottom="@dimen/summary_margin_bottom"
-                    android:paddingLeft="@dimen/content_margin_left"
-                    android:paddingRight="@dimen/content_margin_right"
-                    style="@style/PageSummaryText"
-                    android:text="@string/services_explanation"
-                    android:clickable="true"/>
-
                 <LinearLayout
                     android:id="@+id/killswitch"
                     android:orientation="horizontal"
@@ -102,9 +89,9 @@
 
                 </LinearLayout>
 
-                <!-- Whether or not to enable metrics -->
+                <!-- Privacy Guard -->
                 <LinearLayout
-                    android:id="@+id/metrics"
+                    android:id="@+id/privacy_guard"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -113,18 +100,17 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:clickable="true">
 
-
                     <CheckBox
-                        android:id="@+id/enable_metrics_checkbox"
+                        android:id="@+id/privacy_guard_checkbox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
                         android:layout_marginTop="5dp"
                         android:duplicateParentState="true"
-                        android:clickable="false"/>
+                        android:clickable="false" />
 
                     <TextView
-                        android:id="@+id/enable_metrics_summary"
+                        android:id="@+id/privacy_guard_summary"
                         android:layout_width="0px"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -134,8 +120,7 @@
                         android:layout_marginLeft="@dimen/location_text_margin_left"
                         android:layout_marginRight="@dimen/location_text_margin_right"
                         android:paddingBottom="@dimen/content_margin_bottom"
-                        android:text="@string/services_metrics_label"/>
-
+                        android:text="@string/services_os_privacy_guard"/>
                 </LinearLayout>
 
                 <!-- Whether or not to enable default theme -->
