SetupWizard - Rebrand to LineageOS
Replace Logo and Cyanogen references with LineageOS, where applicable
(but don't replace coloring, fonts etc.)

Change-Id: I397dc569ef9eff43d54e55900f23974cc08b5000

--- a/res/layout/setup_welcome_page.xml
+++ b/res/layout/setup_welcome_page.xml
@@ -19,7 +19,14 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <include layout="@layout/logo_header" />
+    <ImageView
+        android:id="@+id/brand_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/logo"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:padding="@dimen/content_margin_left"/>
 
     <RelativeLayout android:id="@+id/page"
                  android:layout_width="match_parent"
