--- a/res/layout/setup_finished_page.xml
+++ b/res/layout/setup_finished_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2013 The CyanogenMod Project
+     Copyright (C) 2017 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -17,15 +18,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/primary">
+              android:layout_height="match_parent">
+
+    <Space android:layout_width="match_parent"
+           android:layout_height="0px"
+           android:layout_weight="1"/>
 
     <ImageView
-        android:id="@+id/brand_logo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/brand_finish"
-        android:scaleType="centerInside"
-        android:padding="@dimen/content_margin_left"/>
+       android:id="@+id/brand_logo"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:src="@drawable/logo"
+       android:adjustViewBounds="true"
+       android:scaleType="fitCenter"
+       android:padding="@dimen/content_margin_left"/>
+
+    <Space android:layout_width="match_parent"
+           android:layout_height="0px"
+           android:layout_weight="1"/>
 
 </LinearLayout>
